--- a/views/index.jade
+++ b/views/index.jade
@@ -1,20 +1,18 @@
 extends header
 
 block content
-  div.header
   div.nav
     div.navbar
       div.title
         h1 
-           <i class="iconfont icon-longmao"></i>  MiuKuHome
+          a(href="/")
+            <i class="iconfont icon-longmao"></i>  MiuKuHome
       div.navlist  
         ul
-          li
+         li
             a(href='#') 首页
           li
             a(href='#') 技术  
-          li
-            a(href='#') 图库
           li
             a(href='#') 作品      
           li
@@ -36,7 +34,7 @@ block content
     div.warp
       div.list
         div.banner
-          img(src="https://static.mf8.biz/wp-content/uploads/2017/06/enable-https-banner.jpg")
+          img(src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1505127355339&di=ff9db17bc8fef5974ecc50227d241dfb&imgtype=0&src=http%3A%2F%2Fimg.c7sky.com%2Fphotobucket%2Fflexbox_zpsb2193349.png")
         h3.title
           span javascript
           a(href="#") 关于javascript的面向对象部分 
@@ -48,7 +46,53 @@ block content
             i(class="iconfont icon-liuyan1")
             0       
         div.abstract
-          p 我的的撒开了多久爱是快乐简单快乐撒娇的卡萨简单快乐撒娇的了撒娇的拉萨科技的快乐撒娇的快乐简单快乐撒娇
-                    
+          p 移动平台的SDK通常会绑定模拟器，它是一个可执行的设备镜像，这样你就可以在主屏幕启动你的App，看看它在多个平台是如何交互的。 在命令行运行下面的命令，会重新构建App并可以在特定平台的模拟器上查看,移动平台的SDK通常会绑定模拟器，它是一个可执行的设备镜像，这样你就可以在主屏幕启动你的App，看看它在多个平台是如何交互的。 在命令行运行下面的命令，会重新构建App并可以在特定平台的模拟器上查看
+        div.visit
+          ul
+            li
+              a(href="#")
+                img(src="https://ss0.bdstatic.com/70cFuHSh_Q1YnxGkpoWK1HF6hhy/it/u=2333412040,4076017672&fm=27&gp=0.jpg")
+            li
+              a(href="#")
+                img(src="https://ss0.bdstatic.com/70cFvHSh_Q1YnxGkpoWK1HF6hhy/it/u=3007519245,1700294731&fm=27&gp=0.jpg") 
+            li
+              a(href="#")
+                img(src="http://img3.imgtn.bdimg.com/it/u=3434393591,1704743498&fm=27&gp=0.jpg")      
+      div.list
+              div.banner
+                img(src="http://ww2.sinaimg.cn/large/0066KRqFgw1f5b65wprhuj30go0870u0.jpg")
+              h3.title
+                span javascript
+                a(href="#") 关于javascript的面向对象部分 
+              div.info
+                b MiuKu 
+                span 发布于
+                time 2017年9月10日 
+                span
+                  i(class="iconfont icon-liuyan1")
+                  0       
+              div.abstract
+                p 移动平台的SDK通常会绑定模拟器，它是一个可执行的设备镜像，这样你就可以在主屏幕启动你的App，看看它在多个平台是如何交互的。 在命令行运行下面的命令，会重新构建App并可以在特定平台的模拟器上查看,移动平台的SDK通常会绑定模拟器，它是一个可执行的设备镜像，这样你就可以在主屏幕启动你的App，看看它在多个平台是如何交互的。 在命令行运行下面的命令，会重新构建App并可以在特定平台的模拟器上查看
+              div.visit
+                ul
+                  li
+                    a(href="#")
+                      img(src="https://ss0.bdstatic.com/70cFuHSh_Q1YnxGkpoWK1HF6hhy/it/u=2333412040,4076017672&fm=27&gp=0.jpg")
+                  li
+                    a(href="#")
+                      img(src="https://ss0.bdstatic.com/70cFvHSh_Q1YnxGkpoWK1HF6hhy/it/u=3007519245,1700294731&fm=27&gp=0.jpg") 
+                  li
+                    a(href="#")
+                      img(src="http://img3.imgtn.bdimg.com/it/u=3434393591,1704743498&fm=27&gp=0.jpg")      
+
+
+  div.page
+    ul
+      li
+        a(href="#") 上一页
+      li
+        a(href="#") 1/3  
+      li
+        a(href="#") 下一页      
   include footer
             
