--- a/views/index.jade
+++ b/views/index.jade
@@ -1,43 +1,15 @@
-extends header
+include header
 
 block content
-  div.nav
-    div.navbar
-      div.title
-        h1 
-          a(href="/")
-            <i class="iconfont icon-longmao"></i>  MiuKuHome
-      div.navlist  
-        ul
-         li
-            a(href='#') 首页
-          li
-            a(href='#') 技术  
-          li
-            a(href='#') 作品      
-          li
-            a(href='#') Github
-          li
-            a(href='#') 关于  
-      div.menue
-        a(href='javascript:;',id="menu")
-          i(class="iconfont icon-icon")
-      div.search
-        div.link
-          a(href='javascript:;',id="search")
-            i(class="iconfont icon-sousuo")
-        div.search_form
-          form(action="")
-            input(type="search", name="search",placeholder="请输入搜索内容")
-            p 请输入要搜索内容的标题或关键字
+  include navbar
   div.main
-    div.warp
+    div.container
       div.list
         div.banner
           img(src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1505127355339&di=ff9db17bc8fef5974ecc50227d241dfb&imgtype=0&src=http%3A%2F%2Fimg.c7sky.com%2Fphotobucket%2Fflexbox_zpsb2193349.png")
         h3.title
           span javascript
-          a(href="#") 关于javascript的面向对象部分 
+          a(href="/details") 关于javascript的面向对象部分 
         div.info
           b MiuKu 
           span 发布于
@@ -89,10 +61,10 @@ block content
   div.page
     ul
       li
-        a(href="#") 上一页
+        a(href="#")< 上一页
+      li.count
+       span  1 / 3  
       li
-        a(href="#") 1/3  
-      li
-        a(href="#") 下一页      
+        a(href="#") 下一页 >
   include footer
             
