--- a/views/navbar.jade
+++ b/views/navbar.jade
@@ -12,11 +12,11 @@ block navbar
           li
             a(href='#') 技术 
           li
-            a(href='#') 作品      
+            a(href='http://miukudemo.me',target="blank") 作品      
           li
             a(href='https://github.com/MiuKuhome',target="blank") Github
           li
-            a(href='#') 关于  
+            a(href='/about') 关于  
       div.menue
         a(href='javascript:;',id="menu")
           i(class="iconfont icon-icon")
